# agentic-transfer-verifier

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: research-task.yml
.github/workflows/: tests.yml
docs/: boundary-model.md  data-envelope.md  problem-statement.md  research-roadmap.md  roadmap.md
src/agentic_transfer_verifier/: __init__.py  models.py  verifier.py
tests/: test_verifier.py
