[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-transfer-verifier"
version = "0.1.0"
description = "Local verifier for agentic data handoffs: envelope, provenance, trust, authority, and audit checks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Dmitry Krivonosov" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
